2006-03-23  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (child_info_spawn::handle_spawn): Don't initialize the
	console handler here.
	* dtable.cc (dtable::stdio_init): Initialize console handler here.

2006-03-23  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc (sigalloc): Don't set SA_RESTART here.
	* signal.cc (_SA_NORESTART): New flag.
	(sigaction_worker): New function, derived from sigaction.  Don't set
	internal flags unless called internally.
	(sigaction): Use sigaction_worker.
	(signal): Honor new _SA_NORESTART flag.
	(siginterrupt): Set _SA_NORESTART flag appropriately.  Use
	sigaction_worker to set flags.
	* include/cygwin/signal.h: Define _SA_INTERNAL_MASK here.

2006-03-22  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (pthread_mutex::is_good_initializer_or_bad_object): Delete.
	(pthread_cond::is_good_initializer_or_bad_object): Delete.
	(pthread_rwlock::is_good_initializer_or_bad_object): Delete.
	(pthread_cond::init): Remove disabled code.  Guard assignment to
	object to initialize against access violation.
	(pthread_rwlock::init): Ditto.
	(pthread_mutex::init): Ditto.

2006-03-22  Eric Blake  <ebb9@byu.net>

	* fhandler.cc (fcntl): Print flags in hex.

2006-03-22  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (dll_crt0_0): Semi-revert 2006-03-14 change which moved
	pinfo_init and uinfo_init here.
	(dll_crt0_1): Ditto.
	(__dll_crt0): Ditto. Don't call update_envptrs here.
	(dll_crt0_1): Ditto. Move wait_for_sigthread call here from dll_crt0_0.
	* environ.cc (environ_init): Call it here instead.
	* sigproc.cc (my_readsig): New static variable.
	(wait_for_sigthread): Set up read pipe here since we are assured that
	we have the proper privileges when this is called.
	(talktome): Eliminate second argument since it is available as a global
	now.
	(wait_sig): Reflect use of my_readsig.

2006-03-22  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (pthread_cond::init): Disable validity test of object